--- a/package.json
+++ b/package.json
@@ -14,51 +14,53 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.0",
-    "@angular/common": "^6.0.0",
-    "@angular/compiler": "^6.0.0",
-    "@angular/core": "^6.0.0",
-    "@angular/forms": "^6.0.0",
-    "@angular/http": "^6.0.0",
-    "@angular/platform-browser": "^6.0.0",
-    "@angular/platform-browser-dynamic": "^6.0.0",
-    "@angular/router": "^6.0.0",
-    "angular-highlight-js": "^2.0.1",
-    "body-parser": "^1.18.3",
-    "cookie-parser": "^1.4.3",
-    "core-js": "^2.5.4",
-    "express": "^4.16.3",
-    "highlight.js": "^9.12.0",
-    "keycloak-angular": "^3.0.2",
-    "rxjs": "^6.1.0",
-    "rxjs-compat": "^6.1.0",
+    "@angular/animations": "^7.2.15",
+    "@angular/common": "^7.2.15",
+    "@angular/compiler": "^7.2.15",
+    "@angular/core": "^7.2.15",
+    "@angular/forms": "^7.2.15",
+    "@angular/http": "^7.2.15",
+    "@angular/platform-browser": "^7.2.15",
+    "@angular/platform-browser-dynamic": "^7.2.15",
+    "@angular/router": "^7.2.15",
+    "angular2-highlight-js": "^8.0.1",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
+    "core-js": "^2.5.10",
+    "express": "^4.17.1",
+    "highlight.js": "^9.16.2",
+    "keycloak-angular": "^6.0.0",
+    "keycloak-js": "^6.0.0",
+    "rxjs": "^6.0.0",
+    "rxjs-compat": "^6.0.0",
     "serve-favicon": "^2.5.0",
-    "zone.js": "^0.8.26"
+    "tslib": "^1.9.0",
+    "zone.js": "^0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.9",
-    "@angular/cli": "^6.1.5",
-    "@angular/compiler-cli": "^6.0.0",
-    "@angular/language-service": "^6.0.0",
+    "@angular-devkit/build-angular": "~0.13.0",
+    "@angular/cli": "^7.3.9",
+    "@angular/compiler-cli": "^7.2.15",
+    "@angular/language-service": "^7.2.15",
     "@ebondu/angular2-keycloak": "^0.9.4",
-    "@types/jasmine": "~2.8.6",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jasmine": "~2.8.16",
+    "@types/jasminewd2": "~2.0.8",
     "@types/node": "~8.9.4",
-    "angular2-notifications": "^1.0.2",
+    "angular2-notifications": "^2.0.0",
     "angular2-uuid": "^1.1.1",
     "apply-loader": "^2.0.0",
-    "codelyzer": "~4.2.1",
+    "codelyzer": "^5.2.0",
     "jasmine-core": "~2.99.1",
-    "karma": "^2.0.2",
+    "karma": "^2.0.5",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~1.4.2",
+    "karma-coverage-istanbul-reporter": "~1.4.3",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "^5.4.1",
+    "protractor": "^5.4.2",
     "pug": "^2.0.4",
     "pug-loader": "^2.4.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "~2.7.2"
+    "typescript": "~3.2.4"
   }
 }
