--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,15 +2,11 @@ image: docker:git
 services:
   - docker:dind
 
-variables:
-  IMAGE_REF: $CI_REGISTRY_IMAGE:${CI_COMMIT_REF_NAME/\//-}
-
-
 before_script:
   - docker info
 
 build_image:
   script:
     - docker login -u $CI_REGISTRY_USER -p $CI_BUILD_TOKEN $CI_REGISTRY
-    - docker build -t $IMAGE_REF .
-    - docker push $IMAGE_REF
+    - docker build -t $CI_REGISTRY_IMAGE:${CI_COMMIT_REF_NAME/\//-} .
+    - docker push $CI_REGISTRY_IMAGE:${CI_COMMIT_REF_NAME/\//-}
