CatalogManager : Get Entries from CatalogManager

--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "angular-highlight-js": "^2.0.1",
     "angular2-highlight-js": "^8.0.1",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.4.1",
     "cookie-parser": "^1.4.4",
     "core-js": "^2.5.10",
     "express": "^4.17.1",
     "highlight.js": "^9.16.2",
     "keycloak-angular": "^6.0.0",
     "keycloak-js": "^6.0.0",
+    "ngx-md": "^7.1.3",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.0.0",
     "serve-favicon": "^2.5.0",
