--- a/angular.json
+++ b/angular.json
@@ -23,10 +23,13 @@
               "src/assets"
             ],
             "styles": [
+              // TODO : import for later
+              //"node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/highlight.js/styles/tomorrow-night-eighties.css",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+            ]
           },
           "configurations": {
             "production": {
@@ -75,7 +78,8 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": [],
+            "scripts": [
+            ],
             "assets": [
               "src/favicon.ico",
               "src/assets"
