--- a/manifest.yaml
+++ b/manifest.yaml
@@ -70,12 +70,12 @@ objects:
             valueFrom:
               secretKeyRef:
                 key: KEYCLOAK_CLIENT_ID
-                name: kathra-keycloak-secret
+                name: keycloak-secret
           - name: KEYCLOAK_CLIENT_SECRET
             valueFrom:
               secretKeyRef:
                 key: KEYCLOAK_CLIENT_SECRET
-                name: kathra-keycloak-secret
+                name: keycloak-secret
           resources:
             limits:
               cpu: 300m
