--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kathra-dashboard",
-  "version": "1.2.0",
+  "version": "1.3.0-SNAPSHOT",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.conf.json --port 8080",
